(executables
  (names echo_server_sync)
  (modules echo_server_sync)
  (libraries core)
  (preprocess (pps ppx_jane)))

(executables
  (names echo_server_async)
  (modules echo_server_async)
  (libraries core async)
  (preprocess (pps ppx_jane)))

(executables
  (names async_tcp_server)
  (modules async_tcp_server)
  (libraries core async)
  (preprocess (pps ppx_jane)))
